parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMILLAS
    PUNTO

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID PUNTOCOMA vars_opt funcs_opt MAIN body END
Rule 2     vars_opt -> vars
Rule 3     vars_opt -> empty
Rule 4     vars -> VAR vars_1
Rule 5     vars_1 -> id DOSPUNTOS type PUNTOCOMA vars_1
Rule 6     vars_1 -> empty
Rule 7     id -> ID id_1
Rule 8     id_1 -> COMA id
Rule 9     id_1 -> empty
Rule 10    type -> INT
Rule 11    type -> FLOAT
Rule 12    funcs_opt -> funcs funcs_opt
Rule 13    funcs_opt -> empty
Rule 14    funcs -> VOID ID PARENIZQ params PARENDER BRACKETIZQ vars_opt body BRACKETDER PUNTOCOMA
Rule 15    params -> params_1
Rule 16    params -> empty
Rule 17    params_1 -> ID DOSPUNTOS type params_cycle
Rule 18    params_cycle -> COMA params_1
Rule 19    params_cycle -> empty
Rule 20    body -> CORCHETEIZQ statement_opt CORCHETEDER
Rule 21    statement_opt -> statement statement_opt
Rule 22    statement_opt -> empty
Rule 23    statement -> assign
Rule 24    statement -> condition
Rule 25    statement -> cycle
Rule 26    statement -> f_call
Rule 27    statement -> print
Rule 28    assign -> exp IGUAL expresion PUNTOCOMA
Rule 29    condition -> IF PARENIZQ expresion PARENDER body else PUNTOCOMA
Rule 30    else -> ELSE body
Rule 31    else -> empty
Rule 32    cycle -> DO body WHILE PARENIZQ expresion PARENDER PUNTOCOMA
Rule 33    f_call -> ID PARENIZQ expresion_opt PARENDER PUNTOCOMA
Rule 34    print -> PRINT PARENIZQ printable PARENDER PUNTOCOMA
Rule 35    printable -> CTE_STRING printable_1
Rule 36    printable -> expresion printable_1
Rule 37    printable_1 -> COMA printable
Rule 38    printable_1 -> empty
Rule 39    expresion_opt -> expresion expresion_cycle
Rule 40    expresion_opt -> empty
Rule 41    expresion_cycle -> COMA expresion_opt
Rule 42    expresion_cycle -> empty
Rule 43    expresion -> exp expresion_1
Rule 44    expresion_1 -> MENORQUE exp
Rule 45    expresion_1 -> MAYORQUE exp
Rule 46    expresion_1 -> EXCLAMACION IGUAL exp
Rule 47    expresion_1 -> empty
Rule 48    exp -> termino exp_1
Rule 49    exp_1 -> MINUS exp
Rule 50    exp_1 -> PLUS exp
Rule 51    exp_1 -> empty
Rule 52    termino -> factor termino_1
Rule 53    termino_1 -> MULT termino
Rule 54    termino_1 -> DIV termino
Rule 55    termino_1 -> empty
Rule 56    factor -> PARENIZQ expresion PARENDER
Rule 57    factor -> MINUS factor_1
Rule 58    factor -> PLUS factor_1
Rule 59    factor -> factor_1
Rule 60    factor_1 -> ID
Rule 61    factor_1 -> cte
Rule 62    cte -> CTE_INT
Rule 63    cte -> CTE_FLOAT
Rule 64    empty -> <empty>

Terminals, with rules where they appear

BRACKETDER           : 14
BRACKETIZQ           : 14
COMA                 : 8 18 37 41
COMILLAS             : 
CORCHETEDER          : 20
CORCHETEIZQ          : 20
CTE_FLOAT            : 63
CTE_INT              : 62
CTE_STRING           : 35
DIV                  : 54
DO                   : 32
DOSPUNTOS            : 5 17
ELSE                 : 30
END                  : 1
EXCLAMACION          : 46
FLOAT                : 11
ID                   : 1 7 14 17 33 60
IF                   : 29
IGUAL                : 28 46
INT                  : 10
MAIN                 : 1
MAYORQUE             : 45
MENORQUE             : 44
MINUS                : 49 57
MULT                 : 53
PARENDER             : 14 29 32 33 34 56
PARENIZQ             : 14 29 32 33 34 56
PLUS                 : 50 58
PRINT                : 34
PROGRAM              : 1
PUNTO                : 
PUNTOCOMA            : 1 5 14 28 29 32 33 34
VAR                  : 4
VOID                 : 14
WHILE                : 32
error                : 

Nonterminals, with rules where they appear

assign               : 23
body                 : 1 14 29 30 32
condition            : 24
cte                  : 61
cycle                : 25
else                 : 29
empty                : 3 6 9 13 16 19 22 31 38 40 42 47 51 55
exp                  : 28 43 44 45 46 49 50
exp_1                : 48
expresion            : 28 29 32 36 39 56
expresion_1          : 43
expresion_cycle      : 39
expresion_opt        : 33 41
f_call               : 26
factor               : 52
factor_1             : 57 58 59
funcs                : 12
funcs_opt            : 1 12
id                   : 5 8
id_1                 : 7
params               : 14
params_1             : 15 18
params_cycle         : 17
print                : 27
printable            : 34 37
printable_1          : 35 36
program              : 0
statement            : 21
statement_opt        : 20 21
termino              : 48 53 54
termino_1            : 52
type                 : 5 17
vars                 : 2
vars_1               : 4 5
vars_opt             : 1 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID PUNTOCOMA vars_opt funcs_opt MAIN body END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID PUNTOCOMA vars_opt funcs_opt MAIN body END

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . PUNTOCOMA vars_opt funcs_opt MAIN body END

    PUNTOCOMA       shift and go to state 4


state 4

    (1) program -> PROGRAM ID PUNTOCOMA . vars_opt funcs_opt MAIN body END
    (2) vars_opt -> . vars
    (3) vars_opt -> . empty
    (4) vars -> . VAR vars_1
    (64) empty -> .

    VAR             shift and go to state 8
    VOID            reduce using rule 64 (empty -> .)
    MAIN            reduce using rule 64 (empty -> .)

    vars_opt                       shift and go to state 5
    vars                           shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID PUNTOCOMA vars_opt . funcs_opt MAIN body END
    (12) funcs_opt -> . funcs funcs_opt
    (13) funcs_opt -> . empty
    (14) funcs -> . VOID ID PARENIZQ params PARENDER BRACKETIZQ vars_opt body BRACKETDER PUNTOCOMA
    (64) empty -> .

    VOID            shift and go to state 12
    MAIN            reduce using rule 64 (empty -> .)

    funcs_opt                      shift and go to state 9
    funcs                          shift and go to state 10
    empty                          shift and go to state 11

state 6

    (2) vars_opt -> vars .

    VOID            reduce using rule 2 (vars_opt -> vars .)
    MAIN            reduce using rule 2 (vars_opt -> vars .)
    CORCHETEIZQ     reduce using rule 2 (vars_opt -> vars .)


state 7

    (3) vars_opt -> empty .

    VOID            reduce using rule 3 (vars_opt -> empty .)
    MAIN            reduce using rule 3 (vars_opt -> empty .)
    CORCHETEIZQ     reduce using rule 3 (vars_opt -> empty .)


state 8

    (4) vars -> VAR . vars_1
    (5) vars_1 -> . id DOSPUNTOS type PUNTOCOMA vars_1
    (6) vars_1 -> . empty
    (7) id -> . ID id_1
    (64) empty -> .

    ID              shift and go to state 16
    VOID            reduce using rule 64 (empty -> .)
    MAIN            reduce using rule 64 (empty -> .)
    CORCHETEIZQ     reduce using rule 64 (empty -> .)

    vars_1                         shift and go to state 13
    id                             shift and go to state 14
    empty                          shift and go to state 15

state 9

    (1) program -> PROGRAM ID PUNTOCOMA vars_opt funcs_opt . MAIN body END

    MAIN            shift and go to state 17


state 10

    (12) funcs_opt -> funcs . funcs_opt
    (12) funcs_opt -> . funcs funcs_opt
    (13) funcs_opt -> . empty
    (14) funcs -> . VOID ID PARENIZQ params PARENDER BRACKETIZQ vars_opt body BRACKETDER PUNTOCOMA
    (64) empty -> .

    VOID            shift and go to state 12
    MAIN            reduce using rule 64 (empty -> .)

    funcs                          shift and go to state 10
    funcs_opt                      shift and go to state 18
    empty                          shift and go to state 11

state 11

    (13) funcs_opt -> empty .

    MAIN            reduce using rule 13 (funcs_opt -> empty .)


state 12

    (14) funcs -> VOID . ID PARENIZQ params PARENDER BRACKETIZQ vars_opt body BRACKETDER PUNTOCOMA

    ID              shift and go to state 19


state 13

    (4) vars -> VAR vars_1 .

    VOID            reduce using rule 4 (vars -> VAR vars_1 .)
    MAIN            reduce using rule 4 (vars -> VAR vars_1 .)
    CORCHETEIZQ     reduce using rule 4 (vars -> VAR vars_1 .)


state 14

    (5) vars_1 -> id . DOSPUNTOS type PUNTOCOMA vars_1

    DOSPUNTOS       shift and go to state 20


state 15

    (6) vars_1 -> empty .

    VOID            reduce using rule 6 (vars_1 -> empty .)
    MAIN            reduce using rule 6 (vars_1 -> empty .)
    CORCHETEIZQ     reduce using rule 6 (vars_1 -> empty .)


state 16

    (7) id -> ID . id_1
    (8) id_1 -> . COMA id
    (9) id_1 -> . empty
    (64) empty -> .

    COMA            shift and go to state 22
    DOSPUNTOS       reduce using rule 64 (empty -> .)

    id_1                           shift and go to state 21
    empty                          shift and go to state 23

state 17

    (1) program -> PROGRAM ID PUNTOCOMA vars_opt funcs_opt MAIN . body END
    (20) body -> . CORCHETEIZQ statement_opt CORCHETEDER

    CORCHETEIZQ     shift and go to state 25

    body                           shift and go to state 24

state 18

    (12) funcs_opt -> funcs funcs_opt .

    MAIN            reduce using rule 12 (funcs_opt -> funcs funcs_opt .)


state 19

    (14) funcs -> VOID ID . PARENIZQ params PARENDER BRACKETIZQ vars_opt body BRACKETDER PUNTOCOMA

    PARENIZQ        shift and go to state 26


state 20

    (5) vars_1 -> id DOSPUNTOS . type PUNTOCOMA vars_1
    (10) type -> . INT
    (11) type -> . FLOAT

    INT             shift and go to state 28
    FLOAT           shift and go to state 29

    type                           shift and go to state 27

state 21

    (7) id -> ID id_1 .

    DOSPUNTOS       reduce using rule 7 (id -> ID id_1 .)


state 22

    (8) id_1 -> COMA . id
    (7) id -> . ID id_1

    ID              shift and go to state 16

    id                             shift and go to state 30

state 23

    (9) id_1 -> empty .

    DOSPUNTOS       reduce using rule 9 (id_1 -> empty .)


state 24

    (1) program -> PROGRAM ID PUNTOCOMA vars_opt funcs_opt MAIN body . END

    END             shift and go to state 31


state 25

    (20) body -> CORCHETEIZQ . statement_opt CORCHETEDER
    (21) statement_opt -> . statement statement_opt
    (22) statement_opt -> . empty
    (23) statement -> . assign
    (24) statement -> . condition
    (25) statement -> . cycle
    (26) statement -> . f_call
    (27) statement -> . print
    (64) empty -> .
    (28) assign -> . exp IGUAL expresion PUNTOCOMA
    (29) condition -> . IF PARENIZQ expresion PARENDER body else PUNTOCOMA
    (32) cycle -> . DO body WHILE PARENIZQ expresion PARENDER PUNTOCOMA
    (33) f_call -> . ID PARENIZQ expresion_opt PARENDER PUNTOCOMA
    (34) print -> . PRINT PARENIZQ printable PARENDER PUNTOCOMA
    (48) exp -> . termino exp_1
    (52) termino -> . factor termino_1
    (56) factor -> . PARENIZQ expresion PARENDER
    (57) factor -> . MINUS factor_1
    (58) factor -> . PLUS factor_1
    (59) factor -> . factor_1
    (60) factor_1 -> . ID
    (61) factor_1 -> . cte
    (62) cte -> . CTE_INT
    (63) cte -> . CTE_FLOAT

    CORCHETEDER     reduce using rule 64 (empty -> .)
    IF              shift and go to state 41
    DO              shift and go to state 43
    ID              shift and go to state 44
    PRINT           shift and go to state 45
    PARENIZQ        shift and go to state 42
    MINUS           shift and go to state 48
    PLUS            shift and go to state 50
    CTE_INT         shift and go to state 52
    CTE_FLOAT       shift and go to state 53

    statement_opt                  shift and go to state 32
    statement                      shift and go to state 33
    empty                          shift and go to state 34
    assign                         shift and go to state 35
    condition                      shift and go to state 36
    cycle                          shift and go to state 37
    f_call                         shift and go to state 38
    print                          shift and go to state 39
    exp                            shift and go to state 40
    termino                        shift and go to state 46
    factor                         shift and go to state 47
    factor_1                       shift and go to state 49
    cte                            shift and go to state 51

state 26

    (14) funcs -> VOID ID PARENIZQ . params PARENDER BRACKETIZQ vars_opt body BRACKETDER PUNTOCOMA
    (15) params -> . params_1
    (16) params -> . empty
    (17) params_1 -> . ID DOSPUNTOS type params_cycle
    (64) empty -> .

    ID              shift and go to state 54
    PARENDER        reduce using rule 64 (empty -> .)

    params                         shift and go to state 55
    params_1                       shift and go to state 56
    empty                          shift and go to state 57

state 27

    (5) vars_1 -> id DOSPUNTOS type . PUNTOCOMA vars_1

    PUNTOCOMA       shift and go to state 58


state 28

    (10) type -> INT .

    PUNTOCOMA       reduce using rule 10 (type -> INT .)
    COMA            reduce using rule 10 (type -> INT .)
    PARENDER        reduce using rule 10 (type -> INT .)


state 29

    (11) type -> FLOAT .

    PUNTOCOMA       reduce using rule 11 (type -> FLOAT .)
    COMA            reduce using rule 11 (type -> FLOAT .)
    PARENDER        reduce using rule 11 (type -> FLOAT .)


state 30

    (8) id_1 -> COMA id .

    DOSPUNTOS       reduce using rule 8 (id_1 -> COMA id .)


state 31

    (1) program -> PROGRAM ID PUNTOCOMA vars_opt funcs_opt MAIN body END .

    $end            reduce using rule 1 (program -> PROGRAM ID PUNTOCOMA vars_opt funcs_opt MAIN body END .)


state 32

    (20) body -> CORCHETEIZQ statement_opt . CORCHETEDER

    CORCHETEDER     shift and go to state 59


state 33

    (21) statement_opt -> statement . statement_opt
    (21) statement_opt -> . statement statement_opt
    (22) statement_opt -> . empty
    (23) statement -> . assign
    (24) statement -> . condition
    (25) statement -> . cycle
    (26) statement -> . f_call
    (27) statement -> . print
    (64) empty -> .
    (28) assign -> . exp IGUAL expresion PUNTOCOMA
    (29) condition -> . IF PARENIZQ expresion PARENDER body else PUNTOCOMA
    (32) cycle -> . DO body WHILE PARENIZQ expresion PARENDER PUNTOCOMA
    (33) f_call -> . ID PARENIZQ expresion_opt PARENDER PUNTOCOMA
    (34) print -> . PRINT PARENIZQ printable PARENDER PUNTOCOMA
    (48) exp -> . termino exp_1
    (52) termino -> . factor termino_1
    (56) factor -> . PARENIZQ expresion PARENDER
    (57) factor -> . MINUS factor_1
    (58) factor -> . PLUS factor_1
    (59) factor -> . factor_1
    (60) factor_1 -> . ID
    (61) factor_1 -> . cte
    (62) cte -> . CTE_INT
    (63) cte -> . CTE_FLOAT

    CORCHETEDER     reduce using rule 64 (empty -> .)
    IF              shift and go to state 41
    DO              shift and go to state 43
    ID              shift and go to state 44
    PRINT           shift and go to state 45
    PARENIZQ        shift and go to state 42
    MINUS           shift and go to state 48
    PLUS            shift and go to state 50
    CTE_INT         shift and go to state 52
    CTE_FLOAT       shift and go to state 53

    statement                      shift and go to state 33
    statement_opt                  shift and go to state 60
    empty                          shift and go to state 34
    assign                         shift and go to state 35
    condition                      shift and go to state 36
    cycle                          shift and go to state 37
    f_call                         shift and go to state 38
    print                          shift and go to state 39
    exp                            shift and go to state 40
    termino                        shift and go to state 46
    factor                         shift and go to state 47
    factor_1                       shift and go to state 49
    cte                            shift and go to state 51

state 34

    (22) statement_opt -> empty .

    CORCHETEDER     reduce using rule 22 (statement_opt -> empty .)


state 35

    (23) statement -> assign .

    IF              reduce using rule 23 (statement -> assign .)
    DO              reduce using rule 23 (statement -> assign .)
    ID              reduce using rule 23 (statement -> assign .)
    PRINT           reduce using rule 23 (statement -> assign .)
    PARENIZQ        reduce using rule 23 (statement -> assign .)
    MINUS           reduce using rule 23 (statement -> assign .)
    PLUS            reduce using rule 23 (statement -> assign .)
    CTE_INT         reduce using rule 23 (statement -> assign .)
    CTE_FLOAT       reduce using rule 23 (statement -> assign .)
    CORCHETEDER     reduce using rule 23 (statement -> assign .)


state 36

    (24) statement -> condition .

    IF              reduce using rule 24 (statement -> condition .)
    DO              reduce using rule 24 (statement -> condition .)
    ID              reduce using rule 24 (statement -> condition .)
    PRINT           reduce using rule 24 (statement -> condition .)
    PARENIZQ        reduce using rule 24 (statement -> condition .)
    MINUS           reduce using rule 24 (statement -> condition .)
    PLUS            reduce using rule 24 (statement -> condition .)
    CTE_INT         reduce using rule 24 (statement -> condition .)
    CTE_FLOAT       reduce using rule 24 (statement -> condition .)
    CORCHETEDER     reduce using rule 24 (statement -> condition .)


state 37

    (25) statement -> cycle .

    IF              reduce using rule 25 (statement -> cycle .)
    DO              reduce using rule 25 (statement -> cycle .)
    ID              reduce using rule 25 (statement -> cycle .)
    PRINT           reduce using rule 25 (statement -> cycle .)
    PARENIZQ        reduce using rule 25 (statement -> cycle .)
    MINUS           reduce using rule 25 (statement -> cycle .)
    PLUS            reduce using rule 25 (statement -> cycle .)
    CTE_INT         reduce using rule 25 (statement -> cycle .)
    CTE_FLOAT       reduce using rule 25 (statement -> cycle .)
    CORCHETEDER     reduce using rule 25 (statement -> cycle .)


state 38

    (26) statement -> f_call .

    IF              reduce using rule 26 (statement -> f_call .)
    DO              reduce using rule 26 (statement -> f_call .)
    ID              reduce using rule 26 (statement -> f_call .)
    PRINT           reduce using rule 26 (statement -> f_call .)
    PARENIZQ        reduce using rule 26 (statement -> f_call .)
    MINUS           reduce using rule 26 (statement -> f_call .)
    PLUS            reduce using rule 26 (statement -> f_call .)
    CTE_INT         reduce using rule 26 (statement -> f_call .)
    CTE_FLOAT       reduce using rule 26 (statement -> f_call .)
    CORCHETEDER     reduce using rule 26 (statement -> f_call .)


state 39

    (27) statement -> print .

    IF              reduce using rule 27 (statement -> print .)
    DO              reduce using rule 27 (statement -> print .)
    ID              reduce using rule 27 (statement -> print .)
    PRINT           reduce using rule 27 (statement -> print .)
    PARENIZQ        reduce using rule 27 (statement -> print .)
    MINUS           reduce using rule 27 (statement -> print .)
    PLUS            reduce using rule 27 (statement -> print .)
    CTE_INT         reduce using rule 27 (statement -> print .)
    CTE_FLOAT       reduce using rule 27 (statement -> print .)
    CORCHETEDER     reduce using rule 27 (statement -> print .)


state 40

    (28) assign -> exp . IGUAL expresion PUNTOCOMA

    IGUAL           shift and go to state 61


state 41

    (29) condition -> IF . PARENIZQ expresion PARENDER body else PUNTOCOMA

    PARENIZQ        shift and go to state 62


state 42

    (56) factor -> PARENIZQ . expresion PARENDER
    (43) expresion -> . exp expresion_1
    (48) exp -> . termino exp_1
    (52) termino -> . factor termino_1
    (56) factor -> . PARENIZQ expresion PARENDER
    (57) factor -> . MINUS factor_1
    (58) factor -> . PLUS factor_1
    (59) factor -> . factor_1
    (60) factor_1 -> . ID
    (61) factor_1 -> . cte
    (62) cte -> . CTE_INT
    (63) cte -> . CTE_FLOAT

    PARENIZQ        shift and go to state 42
    MINUS           shift and go to state 48
    PLUS            shift and go to state 50
    ID              shift and go to state 65
    CTE_INT         shift and go to state 52
    CTE_FLOAT       shift and go to state 53

    expresion                      shift and go to state 63
    exp                            shift and go to state 64
    termino                        shift and go to state 46
    factor                         shift and go to state 47
    factor_1                       shift and go to state 49
    cte                            shift and go to state 51

state 43

    (32) cycle -> DO . body WHILE PARENIZQ expresion PARENDER PUNTOCOMA
    (20) body -> . CORCHETEIZQ statement_opt CORCHETEDER

    CORCHETEIZQ     shift and go to state 25

    body                           shift and go to state 66

state 44

    (33) f_call -> ID . PARENIZQ expresion_opt PARENDER PUNTOCOMA
    (60) factor_1 -> ID .

    PARENIZQ        shift and go to state 67
    MULT            reduce using rule 60 (factor_1 -> ID .)
    DIV             reduce using rule 60 (factor_1 -> ID .)
    MINUS           reduce using rule 60 (factor_1 -> ID .)
    PLUS            reduce using rule 60 (factor_1 -> ID .)
    IGUAL           reduce using rule 60 (factor_1 -> ID .)


state 45

    (34) print -> PRINT . PARENIZQ printable PARENDER PUNTOCOMA

    PARENIZQ        shift and go to state 68


state 46

    (48) exp -> termino . exp_1
    (49) exp_1 -> . MINUS exp
    (50) exp_1 -> . PLUS exp
    (51) exp_1 -> . empty
    (64) empty -> .

    MINUS           shift and go to state 70
    PLUS            shift and go to state 71
    IGUAL           reduce using rule 64 (empty -> .)
    MENORQUE        reduce using rule 64 (empty -> .)
    MAYORQUE        reduce using rule 64 (empty -> .)
    EXCLAMACION     reduce using rule 64 (empty -> .)
    PARENDER        reduce using rule 64 (empty -> .)
    PUNTOCOMA       reduce using rule 64 (empty -> .)
    COMA            reduce using rule 64 (empty -> .)

    exp_1                          shift and go to state 69
    empty                          shift and go to state 72

state 47

    (52) termino -> factor . termino_1
    (53) termino_1 -> . MULT termino
    (54) termino_1 -> . DIV termino
    (55) termino_1 -> . empty
    (64) empty -> .

    MULT            shift and go to state 74
    DIV             shift and go to state 75
    MINUS           reduce using rule 64 (empty -> .)
    PLUS            reduce using rule 64 (empty -> .)
    IGUAL           reduce using rule 64 (empty -> .)
    MENORQUE        reduce using rule 64 (empty -> .)
    MAYORQUE        reduce using rule 64 (empty -> .)
    EXCLAMACION     reduce using rule 64 (empty -> .)
    PARENDER        reduce using rule 64 (empty -> .)
    PUNTOCOMA       reduce using rule 64 (empty -> .)
    COMA            reduce using rule 64 (empty -> .)

    termino_1                      shift and go to state 73
    empty                          shift and go to state 76

state 48

    (57) factor -> MINUS . factor_1
    (60) factor_1 -> . ID
    (61) factor_1 -> . cte
    (62) cte -> . CTE_INT
    (63) cte -> . CTE_FLOAT

    ID              shift and go to state 65
    CTE_INT         shift and go to state 52
    CTE_FLOAT       shift and go to state 53

    factor_1                       shift and go to state 77
    cte                            shift and go to state 51

state 49

    (59) factor -> factor_1 .

    MULT            reduce using rule 59 (factor -> factor_1 .)
    DIV             reduce using rule 59 (factor -> factor_1 .)
    MINUS           reduce using rule 59 (factor -> factor_1 .)
    PLUS            reduce using rule 59 (factor -> factor_1 .)
    IGUAL           reduce using rule 59 (factor -> factor_1 .)
    MENORQUE        reduce using rule 59 (factor -> factor_1 .)
    MAYORQUE        reduce using rule 59 (factor -> factor_1 .)
    EXCLAMACION     reduce using rule 59 (factor -> factor_1 .)
    PARENDER        reduce using rule 59 (factor -> factor_1 .)
    PUNTOCOMA       reduce using rule 59 (factor -> factor_1 .)
    COMA            reduce using rule 59 (factor -> factor_1 .)


state 50

    (58) factor -> PLUS . factor_1
    (60) factor_1 -> . ID
    (61) factor_1 -> . cte
    (62) cte -> . CTE_INT
    (63) cte -> . CTE_FLOAT

    ID              shift and go to state 65
    CTE_INT         shift and go to state 52
    CTE_FLOAT       shift and go to state 53

    factor_1                       shift and go to state 78
    cte                            shift and go to state 51

state 51

    (61) factor_1 -> cte .

    MULT            reduce using rule 61 (factor_1 -> cte .)
    DIV             reduce using rule 61 (factor_1 -> cte .)
    MINUS           reduce using rule 61 (factor_1 -> cte .)
    PLUS            reduce using rule 61 (factor_1 -> cte .)
    IGUAL           reduce using rule 61 (factor_1 -> cte .)
    MENORQUE        reduce using rule 61 (factor_1 -> cte .)
    MAYORQUE        reduce using rule 61 (factor_1 -> cte .)
    EXCLAMACION     reduce using rule 61 (factor_1 -> cte .)
    PARENDER        reduce using rule 61 (factor_1 -> cte .)
    PUNTOCOMA       reduce using rule 61 (factor_1 -> cte .)
    COMA            reduce using rule 61 (factor_1 -> cte .)


state 52

    (62) cte -> CTE_INT .

    MULT            reduce using rule 62 (cte -> CTE_INT .)
    DIV             reduce using rule 62 (cte -> CTE_INT .)
    MINUS           reduce using rule 62 (cte -> CTE_INT .)
    PLUS            reduce using rule 62 (cte -> CTE_INT .)
    IGUAL           reduce using rule 62 (cte -> CTE_INT .)
    MENORQUE        reduce using rule 62 (cte -> CTE_INT .)
    MAYORQUE        reduce using rule 62 (cte -> CTE_INT .)
    EXCLAMACION     reduce using rule 62 (cte -> CTE_INT .)
    PARENDER        reduce using rule 62 (cte -> CTE_INT .)
    PUNTOCOMA       reduce using rule 62 (cte -> CTE_INT .)
    COMA            reduce using rule 62 (cte -> CTE_INT .)


state 53

    (63) cte -> CTE_FLOAT .
